--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Git Уроки</title>
+	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<h1>Изучение Git</h1>
+	<div class="wrap">
+		<h1>Изучение Git</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias autem maxime, blanditiis ut soluta error perferendis dolore deserunt aperiam corporis. Expedita, nam autem eum nemo assumenda molestiae ratione, quam eligendi!</p>
+	</div>
 </body>
 </html>
